2009-08-11  Miguel de Dios <miguel.dedios@artica.es>

	* godmode/servers/manage_recontask_form.php,
	godmode/servers/manage_recontask.php, include/help/en/help_recontask.php,
	operation/servers/view_server_detail.php: change strings for more easy
	understand.

2009-08-11  Miguel de Dios <miguel.dedios@artica.es>

	* godmode/agentes/configurar_agente.php: change string for more easy
	understand.

2009-08-07  Miguel de Dios <miguel.dedios@artica.es>

	* operation/visual_console/index.php,
	pandora_console/operation/users/user.php, operation/incidents/incident.php,
	operation/agentes/status_monitor.php, operation/agentes/estado_agente.php,
	operation/agentes/alerts_status.php, include/styles/pandora.css,
	include/styles/pandora_black.css,include/styles/pandora_blackmetal.css,
	include/styles/pandora_width.css, include/styles/pandora_minimal.css,
	include/styles/pandora_red.css: the table list now has rows with alternate
	colours for easy see the data.
	
2009-08-10  Jorge Gonzalez  <jorge.gonzalez@artica.es>

	* include/languages/es.po, include/languages/es.mo: Updated Spanish
	* translation

	*  include/languages/index.pot: Updated PO template.

	* operation/search_results.php: Modified a i18n string.

2009-08-07  Miguel de Dios <miguel.dedios@artica.es>

	* include/functions_html.php: add options at html widgets for disable.

2009-08-07  Miguel de Dios <miguel.dedios@artica.es>

	* index.php: Fix error with writting buffer after ob_start and before
	Pandora console don't change the http header.
	Fixes: 2833710 

2009-08-05  Sancho Lerena <slerena@artica.es>

	* include/styles/pandora.css: Adjusted head and removed small heigh 
	problems in some tabs (agent and search sections).
		
	* include/javascript/pandora.js: winopeng call for module graph is now 
	widther.
	
	* index.php: Now defined a default search for agents().
	
	* general/header.php: Redesign of header.
	
	* general/pandora_help.php: Some visual changes in background and footer.
	